--- a/web_html-2.html
+++ b/web_html-2.html
@@ -11,10 +11,22 @@
 
 </head>
 <body>
-    
-    <h1>Hello World</h1> 
-    
-    <h2>I am adib </h2>
+
+    <nav>
+
+        <div>
+            <h2><span>W</span>eb <span>N</span>ame</h2>
+        </div>
+
+        <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Blog</a></li>
+            <li><a href="#">videos</a></li>
+            <li><a href="#">Contact Us</a></li>
+            <li><a href="#">Adout Us</a></li>
+        </ul>
+
+    </nav>
 
 </body>
 </html>
