--- a/web_html-2.html
+++ b/web_html-2.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <!-- fontawesome link  -->
+     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
+
     <link rel="stylesheet" href="web_css-2.css">
 
     <title>Multiple Page Web_site Create</title>
@@ -28,5 +32,15 @@
 
     </nav>
 
+    <header class="header">
+
+        <div class="search_box_icon_parent">
+            <!-- <input type="search" placeholder="search" name="" id=""> -->
+            <div>
+                <i class="fa-solid fa-magnifying-glass"></i>
+            </div>
+        </div>
+
+    </header>
 </body>
 </html>
