--- a/web_html-2.html
+++ b/web_html-2.html
@@ -35,12 +35,29 @@
     <header class="header">
 
         <div class="search_box_icon_parent">
-            <!-- <input type="search" placeholder="search" name="" id=""> -->
+            <input type="search" placeholder="search" name="" id="">
             <div>
                 <i class="fa-solid fa-magnifying-glass"></i>
             </div>
         </div>
-
+        
     </header>
+
+    <main>
+
+        <div class="main_section">
+
+            <div class="section_video_item">
+                <div>
+                    <h3>Latest Video</h3>
+                </div>
+                <div>
+                    <h4> Page: <span> 1 </span> of <span> 10 </span> </h4>
+                </div>
+            </div>
+
+        </div>
+
+    </main>
 </body>
 </html>
