--- a/web_html-2.html
+++ b/web_html-2.html
@@ -18,46 +18,68 @@
 
     <nav>
 
-        <div>
-            <h2><span>W</span>eb <span>N</span>ame</h2>
-        </div>
+        <h2> <span>W</span>eb <span>N</span>ame </h2>
 
         <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Blog</a></li>
-            <li><a href="#">videos</a></li>
-            <li><a href="#">Contact Us</a></li>
-            <li><a href="#">Adout Us</a></li>
+
+            <li><a href="#"> 
+                <span></span>
+                <span></span>
+                <span></span>
+                <span></span>
+                Home
+            </a></li>
+
+            <li><a href="#">
+                <span></span>
+                <span></span>
+                <span></span>
+                <span></span>
+                 Blog
+                </a></li>
+
+            <li><a href="#">
+                <span></span>
+                <span></span>
+                <span></span>
+                <span></span>
+                Video
+                </a></li>
+
+            <li><a href="#">
+                <span></span>
+                <span></span>
+                <span></span>
+                <span></span>
+                 Contact Us
+                </a></li>
+
+            <li><a href="#">
+                <span></span>
+                <span></span>
+                <span></span>
+                <span></span>
+                 About Us
+                </a></li>
+
         </ul>
+
 
     </nav>
 
-    <header class="header">
+    <header>
 
-        <div class="search_box_icon_parent">
-            <input type="search" placeholder="search" name="" id="">
-            <div>
+        <div>
+            
+            <input type="search" placeholder="search">
+
+            <div class="header_icon">
                 <i class="fa-solid fa-magnifying-glass"></i>
             </div>
+
         </div>
         
     </header>
 
-    <main>
-
-        <div class="main_section">
-
-            <div class="section_video_item">
-                <div>
-                    <h3>Latest Video</h3>
-                </div>
-                <div>
-                    <h4> Page: <span> 1 </span> of <span> 10 </span> </h4>
-                </div>
-            </div>
-
-        </div>
-
-    </main>
 </body>
 </html>
