--- a/web_html-2.html
+++ b/web_html-2.html
@@ -238,6 +238,7 @@
                     </div>
 
                     <h3> <a href="#"> Next <i class="fa-solid fa-chevron-right"></i> </a> </h3>
+
                 </div>
 
             </div>
@@ -245,6 +246,50 @@
         </section>
 
     </main>
+
+    <footer>
+
+        <div class="f1__container">
+
+            <div class="footer_item-1">
+
+                <h3> <span> W</span>eb <span> N</span>ame </h3>
+
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolores aspernatur deleniti cupiditate labore soluta quas, placeat animi rerum quibusdam voluptate.</p>
+
+                <p> Copyright &copy; 2024</p>
+
+            </div>
+
+            <div class="footer_item-2">
+
+                <h3>Our Links</h3>
+
+                <p><a href="#">YouTube</a></p>
+                <p><a href="#">Support</a></p>
+                <p><a href="#"> Our Company</a></p>
+                <p><a href="#"> Contact</a></p>
+
+            </div>
+
+            <div class="footer_item-3">
+
+                <div>
+                    <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                    <a href="#"><i class="fa-brands fa-youtube"></i></a>
+                    <a href="#"><i class="fa-brands fa-github"></i></a>
+                    <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+                </div>
+
+                <p>Terms of the</p>
+                <p>privancy policy</p>
+                <p>Design by ADIB BHAI</p>
+
+            </div>
+
+        </div>
+
+    </footer>
 
 </body>
 </html>
