--- a/web_html-2.html
+++ b/web_html-2.html
@@ -30,7 +30,7 @@
                 Home
             </a></li>
 
-            <li><a href="#">
+            <li><a href="extra_pages/blog.html">
                 <span></span>
                 <span></span>
                 <span></span>
