--- a/extra_pages/blog.html
+++ b/extra_pages/blog.html
@@ -43,7 +43,7 @@
                 Video
                 </a></li>
 
-            <li><a href="#">
+            <li><a href="../extra_pages/contact.html">
                 <span></span>
                 <span></span>
                 <span></span>
