--- a/web_html-2.html
+++ b/web_html-2.html
@@ -46,7 +46,7 @@
                 Video
                 </a></li>
 
-            <li><a href="#">
+            <li><a href="extra_pages/contact.html">
                 <span></span>
                 <span></span>
                 <span></span>
@@ -54,7 +54,7 @@
                  Contact Us
                 </a></li>
 
-            <li><a href="#">
+            <li><a href="extra_pages/about us.html">
                 <span></span>
                 <span></span>
                 <span></span>
