--- a/extra_pages/video.html
+++ b/extra_pages/video.html
@@ -40,7 +40,7 @@
                 Video
                 </a></li>
 
-            <li><a href="#">
+            <li><a href="./contact.html">
                 <span></span>
                 <span></span>
                 <span></span>
@@ -48,7 +48,7 @@
                  Contact Us
                 </a></li>
 
-            <li><a href="#">
+            <li><a href="./about us.html">
                 <span></span>
                 <span></span>
                 <span></span>
