--- a/extra_pages/contact.html
+++ b/extra_pages/contact.html
@@ -9,6 +9,56 @@
 
 </head>
 <body>
+
+    <nav>
+
+        <h2> <span>W</span>eb <span>N</span>ame </h2>
+
+        <ul>
+
+            <li><a href="../web_html-2.html"> 
+                <span></span>
+                <span></span>
+                <span></span>
+                <span></span>
+                Home
+            </a></li>
+
+            <li><a href="../extra_pages/blog.html">
+                <span></span>
+                <span></span>
+                <span></span>
+                <span></span>
+                 Blog
+                </a></li>
+
+            <li><a href="../extra_pages/video.html">
+                <span></span>
+                <span></span>
+                <span></span>
+                <span></span>
+                Video
+                </a></li>
+
+            <li><a href="./contact.html">
+                <span></span>
+                <span></span>
+                <span></span>
+                <span></span>
+                 Contact Us
+                </a></li>
+
+            <li><a href="./about us.html">
+                <span></span>
+                <span></span>
+                <span></span>
+                <span></span>
+                 About Us
+                </a></li>
+
+        </ul>
+
+    </nav>
     
     <div class="contact_container">
         
